--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -1,9 +1,17 @@
+// RESTEO UNIVERSAL
+
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
+// SMOOTH SCROLL
+
 html {
     scroll-behavior: smooth;
 }
+
+// FUENTES
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
