--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -6,11 +6,11 @@ footer {
     grid-area: footer;
     width: 100%;
     height: 80px;
-    background-color: #272159;
+    background-color: $oscuro;
     text-align: center;
     text-transform: uppercase;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: 700;
+    font-family: $secundaria;
+    font-weight: 400;
     font-size: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -34,7 +34,7 @@ footer {
             text-decoration: none;
             i {
                 font-size: 30px;
-                color: #fff;
+                color: $blanco;
                 margin-right: 0px;
                 margin-left: 0px;
             }
@@ -57,10 +57,10 @@ footer {
         a {
             img {
                 width: 50px;
-                transition: 1s;
+                transition: 0.5s;
                 &:hover {
                     width: 70px;
-                    transition: 1s;
+                    transition: 0.5s;
                 }
             }
         }
@@ -74,7 +74,7 @@ footer {
         align-items: center;
         span {
             font-size: 15px;
-            color: #fff;
+            color: $blanco;
             margin-top: 7px;
         }
     }
