--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -1,8 +1,8 @@
 main {
     grid-area: bodyMain;
-    color: #fff;
-    background-color: #000;
-    font-family: 'Courier New', Courier, monospace;
+    color: $blanco;
+    background-color: $negro;
+    font-family: $principal;
     background-image: url(../media/background.png);
     background-blend-mode: hard-light;
     background-size: contain;
