--- a/scss/components/_slideshow.scss
+++ b/scss/components/_slideshow.scss
@@ -1,9 +1,9 @@
 /* ---------------SLIDESHOW-------------- */
 
 .carousel {
-    background-color: rgba(92, 92, 92, 0.534);
-    margin: 100px 0px 100px 0px;
-    padding: 20px;
+    background-color: $claro;
+    margin: 100px 100px 100px 100px;
+    padding: 10px;
     display: flex;
     justify-content: center;
 }
