--- a/css/style.css
+++ b/css/style.css
@@ -253,14 +253,17 @@ h1 {
       margin-top: 10px;
       margin-right: 0px;
       margin-bottom: 30px;
-      margin-left: 0px; }
+      margin-left: 0px;
+      font-family: "Noto Sans", sans-serif; }
     .bloqueAbout .bloqueIndiv p {
-      margin-right: 7px; }
+      margin-right: 7px;
+      font-family: "Roboto", sans-serif; }
 
 .tituloIntegrantes {
   text-align: center;
   text-transform: uppercase;
   font-size: 40px;
+  font-family: "Noto Sans", sans-serif;
   font-weight: 700;
   margin-top: 5px;
   margin-right: 0px;
@@ -305,12 +308,14 @@ h1 {
       margin-right: 0px;
       margin-bottom: 20px;
       margin-left: 0px;
-      text-align: center; }
+      text-align: center;
+      font-family: "Noto Sans", sans-serif; }
     .principal .fundador p, .secundario .fundador p, .secundario .colaborador p {
       font-size: 16px;
       padding: 0px;
       margin: 0px;
-      text-align: center; }
+      text-align: center;
+      font-family: "Roboto", sans-serif; }
 
 .secundario {
   margin-top: 20px;
@@ -337,12 +342,14 @@ h1 {
       margin-right: 0px;
       margin-bottom: 20px;
       margin-left: 0px;
-      text-align: center; }
+      text-align: center;
+      font-family: "Noto Sans", sans-serif; }
     .secundario .colaborador p {
       font-size: 16px;
       padding: 0px;
       margin: 0px;
-      text-align: center; }
+      text-align: center;
+      font-family: "Roboto", sans-serif; }
 
 /* ----------------/ABOUT----------------- */
 /* --------------------------------------- */
