--- a/scss/base/_maps.scss
+++ b/scss/base/_maps.scss
@@ -7,6 +7,6 @@ $redes:(
 );
 
 $estilos:(
-    colorFondo: rgba(255, 255, 255, 0.05),
-    colorHover: $oscuro,
+    colorFondo: $grisAlpha,
+    colorHover: $claroAlpha,
 );
