--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -9,8 +9,11 @@ $extra: 'Philosopher', sans-serif;
 // PALETA DE COLORES 
 
 $oscuro: #005557;
+$oscuroAlpha: rgba(0, 85, 87, 0.85);
 $claro: #70A9A1;
+$claroAlpha: rgba(112, 169, 161, 0.85);
 $negro: #000;
 $blanco: #fff;
 $gris: #1b1b1b;
+$grisAlpha: rgba(255, 255, 255, 0.051);
 
