cambio de formato de titulo y subtitulo en index, diseño responsive y media queries modificadas. Cambio en tamaño de slideshow

--- a/scss/components/_slideshow.scss
+++ b/scss/components/_slideshow.scss
@@ -2,7 +2,7 @@
 
 .carousel {
     background-color: $claro;
-    margin: 100px 100px 100px 100px;
+    margin: 3rem 3rem 3rem 3rem;
     padding: 10px;
     display: flex;
     justify-content: center;
