--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ main {
 /* ---------------SLIDESHOW-------------- */
 .carousel {
   background-color: #70A9A1;
-  margin: 100px 100px 100px 100px;
+  margin: 3rem 3rem 3rem 3rem;
   padding: 10px;
   display: flex;
   justify-content: center; }
@@ -188,23 +188,46 @@ footer {
   width: 100%;
   object-fit: cover; }
 
-h1 {
-  text-align: center;
-  text-transform: uppercase;
-  font-family: "Noto Sans", sans-serif;
-  font-size: 80px;
-  margin: 0px 0px 0px 0px;
-  padding: 0px; }
-  h1:hover {
-    background-color: #2721594b;
-    border-radius: 10px; }
-
-.subtituloVanadio {
-  text-align: center;
-  font-size: 20px;
-  text-transform: uppercase;
-  margin: 20px 0px 0px 0px;
-  padding: 0px; }
+.bloqueTitulo {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 80px 0px 80px 0px; }
+  .bloqueTitulo .nombreVanadio {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    width: 1400px;
+    height: auto;
+    margin: 0px 20px 0px 20px;
+    padding: 40px 0px 40px 0px;
+    border-radius: 10px;
+    transition: 0.5s; }
+    .bloqueTitulo .nombreVanadio:hover {
+      background-color: rgba(255, 255, 255, 0.051);
+      color: #70A9A1;
+      transition: 0.5s; }
+    .bloqueTitulo .nombreVanadio h1 {
+      text-align: center;
+      text-transform: uppercase;
+      font-family: "Noto Sans", sans-serif;
+      font-weight: 800;
+      font-size: 140px;
+      letter-spacing: 30px;
+      margin: 0px 0px 0px 30px;
+      padding: 0px; }
+    .bloqueTitulo .nombreVanadio h2 {
+      text-align: center;
+      font-size: 40px;
+      font-family: "Noto Sans", sans-serif;
+      font-weight: 600;
+      letter-spacing: 20px;
+      text-transform: uppercase;
+      margin: 20px 0px 0px 20px;
+      padding: 0px; }
 
 .ultimoVideoTitulo {
   text-align: center;
@@ -462,21 +485,31 @@ h1 {
     .gridContainerIndex main .ultimoVideo .ultimoVideoItem {
       width: 800px; } }
 
+@media only screen and (max-width: 980px) {
+  .gridContainerIndex main .bloqueTitulo .nombreVanadio h1 {
+    font-size: 100px; }
+  .gridContainerIndex main .bloqueTitulo .nombreVanadio h2 {
+    font-size: 20px; } }
+
 @media only screen and (max-width: 840px) {
-  .gridContainerIndex main h1 {
-    font-size: 50px; }
-  .gridContainerIndex main .subtituloVanadio {
-    font-size: 17px; }
   .gridContainerIndex main .ultimoVideoTitulo {
     font-size: 40px; }
   .gridContainerIndex main .ultimoVideo .ultimoVideoItem {
     width: 500px; } }
 
+@media only screen and (max-width: 770px) {
+  .gridContainerIndex main .bloqueTitulo .nombreVanadio h1 {
+    font-size: 70px; }
+  .gridContainerIndex main .bloqueTitulo .nombreVanadio h2 {
+    font-size: 15px; } }
+
 @media only screen and (max-width: 600px) {
-  .gridContainerIndex main h1 {
-    font-size: 35px; }
-  .gridContainerIndex main .subtituloVanadio {
-    font-size: 15px; }
+  .gridContainerIndex main .bloqueTitulo .nombreVanadio h1 {
+    font-size: 50px;
+    letter-spacing: 15px; }
+  .gridContainerIndex main .bloqueTitulo .nombreVanadio h2 {
+    font-size: 10px;
+    letter-spacing: 10px; }
   .gridContainerIndex main .ultimoVideoTitulo {
     font-size: 30px; } }
 
@@ -485,10 +518,12 @@ h1 {
     width: 400px; } }
 
 @media only screen and (max-width: 480px) {
-  .gridContainerIndex main h1 {
-    font-size: 30px; }
-  .gridContainerIndex main .subtituloVanadio {
-    font-size: 13px; }
+  .gridContainerIndex main .bloqueTitulo .nombreVanadio h1 {
+    font-size: 30px;
+    letter-spacing: 15px; }
+  .gridContainerIndex main .bloqueTitulo .nombreVanadio h2 {
+    font-size: 8px;
+    letter-spacing: 10px; }
   .gridContainerIndex main .ultimoVideoTitulo {
     font-size: 25px; } }
 
