--- a/scss/base/_mediaqueriesIndex.scss
+++ b/scss/base/_mediaqueriesIndex.scss
@@ -16,18 +16,28 @@
 
 }
 
+@media only screen and (max-width: 980px) {
+    .gridContainerIndex {
+        main {
+            .bloqueTitulo {
+                .nombreVanadio {
+                    h1 {
+                        font-size: 100px;
+                    }
+
+                    h2 {
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media only screen and (max-width: 840px) {
 
     .gridContainerIndex {
         main {
-            h1 {
-                font-size: 50px;
-            }
-
-            .subtituloVanadio {
-                font-size: 17px;
-            }
-
             .ultimoVideoTitulo {
                 font-size: 40px;
             }
@@ -39,19 +49,42 @@
             }
         }
     }
+}
 
+@media only screen and (max-width: 770px) {
+    .gridContainerIndex {
+        main {
+            .bloqueTitulo {
+                .nombreVanadio {
+                    h1 {
+                        font-size: 70px;
+                    }
+
+                    h2 {
+                        font-size: 15px;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media only screen and (max-width: 600px) {
 
     .gridContainerIndex {
         main {
-            h1 {
-                font-size: 35px;
-            }
+            .bloqueTitulo {
+                .nombreVanadio {
+                    h1 {
+                        font-size: 50px;
+                        letter-spacing: 15px;
+                    }
 
-            .subtituloVanadio {
-                font-size: 15px;
+                    h2 {
+                        font-size: 10px;
+                        letter-spacing: 10px;
+                    }
+                }
             }
 
             .ultimoVideoTitulo {
@@ -80,12 +113,18 @@
 
     .gridContainerIndex {
         main {
-            h1 {
-                font-size: 30px;
-            }
+            .bloqueTitulo {
+                .nombreVanadio {
+                    h1 {
+                        font-size: 30px;
+                        letter-spacing: 15px;
+                    }
 
-            .subtituloVanadio {
-                font-size: 13px;
+                    h2 {
+                        font-size: 8px;
+                        letter-spacing: 10px;
+                    }
+                }
             }
 
             .ultimoVideoTitulo {
