--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,28 +18,55 @@
     object-fit: cover;
 }
 
-h1 {
-    text-align: center;
-    text-transform: uppercase;
-    font-family: $principal;
-    font-size: 80px;
-    margin: 0px 0px 0px 0px;
-    padding: 0px;
+.bloqueTitulo {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 80px 0px 80px 0px;
 
-    &:hover {
-        background-color: #2721594b;
+    .nombreVanadio {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        width: 1400px;
+        height: auto;
+        margin: 0px 20px 0px 20px;
+        padding: 40px 0px 40px 0px;
         border-radius: 10px;
+        transition: 0.5s;
+
+        &:hover {
+            background-color: $grisAlpha;
+            color: $claro;
+            transition: 0.5s;
+        }
+
+        h1 {
+            text-align: center;
+            text-transform: uppercase;
+            font-family: $principal;
+            font-weight: 800;
+            font-size: 140px;
+            letter-spacing: 30px;
+            margin: 0px 0px 0px 30px;
+            padding: 0px;
+        }
+
+        h2 {
+            text-align: center;
+            font-size: 40px;
+            font-family: $principal;
+            font-weight: 600;
+            letter-spacing: 20px;
+            text-transform: uppercase;
+            margin: 20px 0px 0px 20px;
+            padding: 0px;
+        }
     }
 }
-
-.subtituloVanadio {
-    text-align: center;
-    font-size: 20px;
-    text-transform: uppercase;
-    margin: 20px 0px 0px 0px;
-    padding: 0px;
-}
-
 
 .ultimoVideoTitulo {
     text-align: center;
@@ -334,6 +361,7 @@ h1 {
                     background-color: $claroAlpha;
                     transition: 0.5s;
                 }
+
                 form {
                     button {
                         background-color: $oscuro;
